# pyxroad

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-security-quality.yml  code_quality.yml  python-publish.yml
XRoad/: Cache.py  Client.py  Members.py  Metod.py  RClient.py  Uxp.py  XClient.py  __init__.py  cache.py  client.py  fixBagInWSDL.py  plugins.py  transport.py
tests/: test_fixBagInWSDL.py  test_members.py
